--- a/App/AppShell.xaml
+++ b/App/AppShell.xaml
@@ -5,6 +5,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:App"
     Shell.FlyoutBehavior="Disabled"
+    MaximumWidthRequest="50"
     Title="App">
 
     <ShellContent
