--- a/App/MainPage.xaml
+++ b/App/MainPage.xaml
@@ -1,36 +1,43 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:local="clr-namespace:App.ViewModels"
+             x:DataType="local:MainPageViewModel"
              x:Class="App.MainPage">
+    <ContentPage.BindingContext>
+        <local:MainPageViewModel/>
+    </ContentPage.BindingContext>
 
-    <ScrollView>
-        <VerticalStackLayout
-            Padding="30,0"
-            Spacing="25">
-            <Image
-                Source="dotnet_bot.png"
-                HeightRequest="185"
-                Aspect="AspectFit"
-                SemanticProperties.Description="dot net bot in a race car number eight" />
+    <Grid HorizontalOptions="FillAndExpand" Margin="30, 0" RowDefinitions="50, *, 50">
+        <Label Grid.Row="0" VerticalTextAlignment="Start" HorizontalTextAlignment="Center">Criar Senha</Label>
+        <VerticalStackLayout Grid.Row="1" Spacing="15">
+            <Label Text="Nome" FontSize="Medium" />
+            <Entry Placeholder="Digite seu nome" />
 
-            <Label
-                Text="Hello, World!"
-                Style="{StaticResource Headline}"
-                SemanticProperties.HeadingLevel="Level1" />
+            <Label Text="Usuário" FontSize="Medium" />
+            <Entry Placeholder="Digite seu usuário" />
 
-            <Label
-                Text="Welcome to &#10;.NET Multi-platform App UI"
-                Style="{StaticResource SubHeadline}"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
+            <Label Text="Senha" FontSize="Medium" />
+            <Entry Placeholder="Digite sua senha" IsPassword="True" />
 
-            <Button
-                x:Name="CounterBtn"
-                Text="Click me" 
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Fill" />
+            <Label Text="Repetir Senha" FontSize="Medium" />
+            <Entry Placeholder="Repita sua senha" IsPassword="True" />
+            <HorizontalStackLayout Margin="0, 20" HorizontalOptions="Center">
+                <Button Text="Salvar"/>
+            </HorizontalStackLayout>
         </VerticalStackLayout>
-    </ScrollView>
+        <Label Grid.Row="2" Margin="0, 0, 0, 10" VerticalTextAlignment="End" HorizontalTextAlignment="Center">
+            <Label.FormattedText>
+                <FormattedString>
+                    <Span Text="© "/>
+                    <Span Text="{Binding CurrentYear}"/>
+                    <Span Text=" MatheuzinhoSoluções"/>
+                </FormattedString>
+            </Label.FormattedText>
+        </Label>
+    </Grid>
 
+    <!--<Label Text="{Binding Source={x:Reference slider},
+                      Path=Value,
+                      StringFormat='The slider value is {0:F2}'}" />-->
 </ContentPage>
