Refatoracao: Namespace de paginas criada

--- a/App/Pages/CreatePassword.xaml
+++ b/App/Pages/CreatePassword.xaml
@@ -3,8 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:App.ViewModels"
              xmlns:tb="clr-namespace:H.NotifyIcon;assembly=H.NotifyIcon.Maui"
-             x:DataType="local:MainPageViewModel"
-             x:Class="App.MainPage">
+             x:DataType="local:CreatePasswordViewModel"
+             x:Class="App.Pages.CreatePassword">
 
 
     <Grid HorizontalOptions="FillAndExpand" Margin="30, 0" RowDefinitions="50, *, 50">
