--- a/App/AppShell.xaml
+++ b/App/AppShell.xaml
@@ -3,14 +3,14 @@
     x:Class="App.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:App"
+    xmlns:local="clr-namespace:App.Pages"
     Shell.FlyoutBehavior="Disabled"
     MaximumWidthRequest="50"
     Title="App">
 
     <ShellContent
-        Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
+        Title="Criar Senha"
+        ContentTemplate="{DataTemplate local:CreatePassword}"
+        Route="create" />
 
 </Shell>
